fridge service refactoring and exception handling