@@ -1,13 +1,12 @@
 package com.example.smartfridge.services;
 
-import com.example.smartfridge.dtos.FridgeDto;
-import com.example.smartfridge.dtos.FridgeInvitesDto;
-import com.example.smartfridge.dtos.ItemRecordDto;
-import com.example.smartfridge.dtos.UserDto;
+import com.example.smartfridge.dtos.*;
 import com.example.smartfridge.entities.Fridge;
 import com.example.smartfridge.entities.FridgeInvites;
 import com.example.smartfridge.entities.ItemRecord;
 import com.example.smartfridge.entities.User;
+import com.example.smartfridge.enums.FridgeInviteStatus;
+import com.example.smartfridge.exceptions.*;
 import com.example.smartfridge.mappers.FridgeInvitesMapper;
 import com.example.smartfridge.mappers.FridgeMapper;
 import com.example.smartfridge.mappers.ItemMapper;
@@ -18,10 +17,12 @@ import com.example.smartfridge.repositories.ItemRepository;
 import com.example.smartfridge.repositories.UserRepository;
 import com.example.smartfridge.utils.UserUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -36,156 +37,172 @@ public class FridgeService {
     private final UserMapper userMapper;
     private final UserUtils userUtils;
 
-    public List<ItemRecordDto> allItems() {
-        return itemMapper.toItemRecordDtoList(itemRepository.findAll());
-    }
-
-    public FridgeDto checkCurrentUserFridge() {
+    public Fridge getCurrentUserFridge() {
         User user = userUtils.getUserFromAuthentication();
-        return fridgeMapper.toFridgeDto(user.getFridge());
+        Fridge fridge = user.getFridge();
+        if (fridge == null) {
+            throw new UserDoesNotHaveAFridgeException("User does not have a fridge");
+        }
+        return fridge;
     }
 
+    @Transactional(readOnly = true)
+    public FridgeDto getCurrentUserFridgeDto() {
+        return fridgeMapper.toFridgeDto(getCurrentUserFridge());
+    }
+
+    @Transactional(readOnly = true)
     public List<ItemRecordDto> allItemsByFridge() {
-        Fridge fridgeId = fridgeMapper.toFridge(checkCurrentUserFridge());
-        return itemMapper.toItemRecordDtoList(itemRepository.findAllByFridgeId(fridgeId));
+        return itemMapper.toItemRecordDtoList(itemRepository.findAllByFridge(getCurrentUserFridge()));
     }
 
+    @Transactional(readOnly = true)
     public ItemRecordDto getItemById(Long id) {
-
-        ItemRecord itemRecord = itemRepository.findById(id).orElse(null);
+        ItemRecord itemRecord = getItemRecordById(id);
         return itemMapper.toItemRecordDto(itemRecord);
     }
 
     public ItemRecordDto createItem(ItemRecordDto itemRecordDto) {
+        itemRecordDto.setId(null);
         ItemRecord itemRecord = itemMapper.toItemRecord(itemRecordDto);
-        Fridge fridgeId = fridgeMapper.toFridge(checkCurrentUserFridge());
-        itemRecord.setFridgeId(fridgeId);
+        Fridge fridge = getCurrentUserFridge();
+        itemRecord.setFridge(fridge);
         itemRepository.save(itemRecord);
         return itemMapper.toItemRecordDto(itemRecord);
 
     }
 
+    @Transactional
     public ItemRecordDto updateItem(ItemRecordDto itemRecordDto) {
-        Long fridgeId = fridgeMapper.toFridge(checkCurrentUserFridge()).getId();
-        ItemRecord itemRecord = itemRepository.findById(itemRecordDto.getId()).orElse(null);
-        if (itemRecord != null && fridgeId.equals(itemRecord.getFridgeId().getId())) {
-            itemRecord = itemMapper.toItemRecord(itemRecordDto);
-            itemRepository.save(itemRecord);
-            return itemMapper.toItemRecordDto(itemRecord);
-        }
-        return null;
+        ItemRecord itemRecord = getItemRecordById(itemRecordDto.getId());
+
+        itemRecord.setName(itemRecordDto.getName());
+        itemRecord.setDescription(itemRecordDto.getDescription());
+        itemRecord.setQuantity(itemRecordDto.getQuantity());
+        itemRecord.setCategory(itemRecordDto.getCategory());
+        itemRecord.setPrice(itemRecordDto.getPrice());
+        itemRecord.setBuyingDate(itemRecordDto.getBuyingDate());
+        itemRecord.setExpirationDate(itemRecordDto.getExpirationDate());
+        itemRepository.save(itemRecord);
+        return itemMapper.toItemRecordDto(itemRecord);
     }
 
+    @Transactional
     public ItemRecordDto deleteItem(Long id) {
-        Long fridgeId = fridgeMapper.toFridge(checkCurrentUserFridge()).getId();
-        ItemRecord itemRecord = itemRepository.findById(id).orElse(null);
-        if (itemRecord != null && fridgeId.equals(itemRecord.getFridgeId().getId())) {
-            itemRepository.delete(itemRecord);
-            return itemMapper.toItemRecordDto(itemRecord);
-        }
-        return null;
+        ItemRecord itemRecord = getItemRecordById(id);
+
+        itemRepository.delete(itemRecord);
+        return itemMapper.toItemRecordDto(itemRecord);
     }
 
-    public FridgeDto createFridge(String fridgeName)
-    {
+    @Transactional
+    public FridgeDto createFridge(String fridgeName) {
         User user = userUtils.getUserFromAuthentication();
 
-        if (user.getFridge().getId() == 0)
-        {
-            Fridge fridge = new Fridge();
-            fridge.setName(fridgeName);
-            fridge.setOwner(user);
-            fridgeRepository.save(fridge);
-            user.setFridge(fridge);
-            userRepository.save(user);
-            return fridgeMapper.toFridgeDto(fridge);
+        if (user.getFridge() != null) {
+            throw new UserAlreadyHasFridgeException("User already has a fridge");
         }
-        return null;
+        Fridge fridge = new Fridge();
+        fridge.setName(fridgeName);
+        fridge.setOwner(user);
+        fridgeRepository.save(fridge);
+        user.setFridge(fridge);
+        userRepository.save(user);
+        return fridgeMapper.toFridgeDto(fridge);
     }
 
-    public FridgeDto deleteFridge() {
-        Fridge fridge = fridgeMapper.toFridge(checkCurrentUserFridge());
-        Fridge basicFridge = fridgeRepository.findById(0L).orElse(null);
+    @Transactional
+    public void deleteFridge() {
         User user = userUtils.getUserFromAuthentication();
-        if (fridge != null && user.getId().equals(fridge.getOwner().getId())) {
-            user.setFridge(basicFridge);
-            fridgeRepository.delete(fridge);
-            userRepository.save(user);
-            return fridgeMapper.toFridgeDto(fridge);
+        Fridge fridge = getCurrentUserFridge();
+        if (!user.getId().equals(fridge.getOwner().getId())) {
+            throw new UserIsNotOwnerOfThisFridgeException("User is not the owner of the fridge");
         }
-        return null;
+        List<User> members = fridge.getUsers();
+        members.forEach(member -> member.setFridge(null));
+        userRepository.saveAll(members);
+        fridgeRepository.delete(fridge);
+
     }
 
+    @Transactional
     public FridgeInvitesDto inviteUser(String username) {
-        System.out.println(username);
         User currentUser = userUtils.getUserFromAuthentication();
         User invitedUser = userRepository.findUserByUsername(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        if (currentUser.getFridge().getId() != 0 && invitedUser.getFridge().getId() == 0)
-        {
-            FridgeInvites invite = new FridgeInvites();
-            invite.setFridgeId(currentUser.getFridge());
-            invite.setUser(currentUser);
-            invite.setInvitedUser(invitedUser);
-            invite.setStatus("invited");
-            fridgeInvitesRepository.save(invite);
-            return fridgeInvitesMapper.toDto(invite);
+                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        if (Objects.equals(currentUser.getId(), invitedUser.getId())) {
+            throw new InviteConflictException("User cannot invite themselves");
         }
-        return null;
+        if (currentUser.getFridge() == null) {
+            throw new UserDoesNotHaveAFridgeException("User does not have a fridge");
+        }
+        if (invitedUser.getFridge() != null) {
+            throw new UserAlreadyHasFridgeException("User already has a fridge");
+        }
+        if (fridgeInvitesRepository.existsByFridgeAndUserAndInvitedUser(currentUser.getFridge(), currentUser, invitedUser)) {
+            throw new InviteConflictException("User already has an invite");
+        }
+        FridgeInvites invite = new FridgeInvites();
+        invite.setFridge(currentUser.getFridge());
+        invite.setUser(currentUser);
+        invite.setInvitedUser(invitedUser);
+        invite.setStatus(FridgeInviteStatus.INVITED);
+        fridgeInvitesRepository.save(invite);
+        return fridgeInvitesMapper.toDto(invite);
     }
 
-    public List<FridgeInvitesDto> getInvitesForUser() {
+    @Transactional(readOnly = true)
+    public List<InvitesResponseDto> getInvitesForUser() {
         User currentUser = userUtils.getUserFromAuthentication();
-        return fridgeInvitesMapper.toDtoList(fridgeInvitesRepository.findAllByInvitedUser(currentUser)
-                .stream().filter(e -> e.getStatus().equals("invited")).collect(Collectors.toList()));
+        List<FridgeInvites> invites = fridgeInvitesRepository.findAllByInvitedUser(currentUser);
+
+        return invites.stream()
+                .filter(invite -> invite.getStatus().equals(FridgeInviteStatus.INVITED))
+                .map(invite -> new InvitesResponseDto(invite.getId(), invite.getUser().getUsername(), invite.getFridge().getName()))
+                .toList();
     }
 
+    @Transactional
     public UserDto leaveFridge() {
         User user = userUtils.getUserFromAuthentication();
-        if (user.getFridge().getId() != 0) {
-            Fridge fridge = fridgeRepository.findById(user.getFridge().getId()).orElse(null);
-            Fridge basicFridge = fridgeRepository.findById(0L).orElse(null);
-            if (fridge != null && !fridge.getOwner().getId().equals(user.getId())) {
-                user.setFridge(basicFridge);
-                userRepository.save(user);
-                return userMapper.toUserDto(user);
-            }
-            return null;
+        Fridge fridge = getCurrentUserFridge();
+        if (fridge.getOwner().getId().equals(user.getId())) {
+            throw new UserIsOwnerOfThisFridgeException("User is the owner of the fridge");
         }
-        return null;
+        user.setFridge(null);
+        userRepository.save(user);
+        return userMapper.toUserDto(user);
     }
 
+    @Transactional
     public UserDto joinFridge(Long inviteId) {
         User user = userUtils.getUserFromAuthentication();
-        FridgeInvites invite = fridgeInvitesRepository.findById(inviteId).orElse(null);
-        if (invite != null && user.getFridge().getId() == 0) {
-            Fridge newFridge = fridgeRepository.findById(invite.getFridgeId().getId())
-                    .orElseThrow(() -> new RuntimeException("Fridge not found"));
-            user.setFridge(newFridge);
-            invite.setStatus("accepted");
-            fridgeInvitesRepository.save(invite);
-            userRepository.save(user);
-            return userMapper.toUserDto(user);
+        FridgeInvites invite = fridgeInvitesRepository.findById(inviteId).orElseThrow(() -> new InviteNotOwnedException("Invite not found"));
+        if (user.getFridge() != null) {
+            throw new UserAlreadyHasFridgeException("User already has a fridge");
         }
-        return null;
+        if (!user.getId().equals(invite.getInvitedUser().getId())) {
+            throw new InviteNotOwnedException("User is not invited to the fridge");
+        }
+        if (!invite.getStatus().equals(FridgeInviteStatus.INVITED)) {
+            throw new InviteAlreadyProcessedException("Invite is no longer valid");
+        }
+        Fridge newFridge = fridgeRepository.findById(invite.getFridge().getId())
+                .orElseThrow(() -> new FridgeNotFoundException("Fridge not found"));
+        user.setFridge(newFridge);
+        invite.setStatus(FridgeInviteStatus.ACCEPTED);
+        fridgeInvitesRepository.save(invite);
+        userRepository.save(user);
+        return userMapper.toUserDto(user);
     }
 
-    public String getInviteUsername(Long id) {
-        FridgeInvites invite = fridgeInvitesRepository.findById(id).orElse(null);
-        if (invite != null) {
-            return invite.getInvitedUser().getUsername();
+    public ItemRecord getItemRecordById(Long itemId) {
+        Long fridgeId = getCurrentUserFridge().getId();
+        ItemRecord itemRecord = itemRepository.findById(itemId).orElseThrow(() -> new ItemNotFoundException("Item not found"));
+        if (!fridgeId.equals(itemRecord.getFridge().getId())) {
+            throw new ItemNotFoundException("Item not found");
         }
-        return null;
+        return itemRecord;
     }
-
-    public String getInviteFridgeName(Long id) {
-        FridgeInvites invite = fridgeInvitesRepository.findById(id).orElse(null);
-        if (invite != null) {
-            return invite.getFridgeId().getName();
-        }
-        return null;
-    }
-
-
 
 }
